[gd_scene load_steps=8 format=3 uid="uid://b7u4ajeh13tpn"]

[ext_resource type="Script" uid="uid://m3wwyfwf46sj" path="res://scripts/ui/LoadingScreen.gd" id="1"]
[ext_resource type="Theme" uid="uid://dy2ly8e3tggi0" path="res://assets/themes/menu.theme" id="1_5fj0j"]
[ext_resource type="Script" uid="uid://nobo2pvlx00b" path="res://scripts/ui/controls/OcMenuContainer.gd" id="3_s2kth"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s41fs"]
content_margin_left = 30.0
content_margin_top = 30.0
content_margin_right = 30.0
content_margin_bottom = 30.0
bg_color = Color(0.067, 0.082, 0.098, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y06jl"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.067, 0.082, 0.098, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_2hmxs"]
color = Color(0.22352941, 0.25490198, 0.27058825, 1)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwu8f"]
bg_color = Color(0.06666667, 0.08235294, 0.09803922, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_5fj0j")
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_5fj0j")

[node name="OCMenuContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s41fs")
script = ExtResource("3_s2kth")
noise_enabled = true
noise_opacity = 0.02
noise_grain = 1.0
metadata/_custom_type_script = "uid://nobo2pvlx00b"

[node name="HBoxContainer" type="HBoxContainer" parent="OCMenuContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OCMenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="LoadingLabel" type="Label" parent="OCMenuContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Loading..."
horizontal_alignment = 2

[node name="MissionCard" type="PanelContainer" parent="."]
unique_name_in_owner = true
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.102000006
anchor_top = 0.171
anchor_right = 0.51600003
anchor_bottom = 0.59400004
offset_left = -0.50400543
offset_top = 0.19200134
offset_right = 0.56799316
offset_bottom = 0.08798218
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y06jl")
script = ExtResource("3_s2kth")
padding = Vector4i(0, 0, 0, 0)
inner_padding = Vector4i(2, 2, 2, 2)
grid_enabled = false
noise_enabled = true
noise_opacity = 0.02
noise_grain = 1.0
metadata/_custom_type_script = "uid://nobo2pvlx00b"

[node name="VBoxContainer" type="VBoxContainer" parent="MissionCard"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MissionCard/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleContainer" type="MarginContainer" parent="MissionCard/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CardTitle" type="Label" parent="MissionCard/VBoxContainer/HBoxContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.851769, 0.851769, 0.8517687, 1)
theme_override_font_sizes/font_size = 24
text = "Placeholder Title"

[node name="Spacer" type="Control" parent="MissionCard/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="MissionCard/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_2hmxs")

[node name="DetailsContainer" type="MarginContainer" parent="MissionCard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MissionCard/VBoxContainer/DetailsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardDesc" type="RichTextLabel" parent="MissionCard/VBoxContainer/DetailsContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.49019608, 0.5058824, 0.5137255, 1)
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
bbcode_enabled = true
text = "Placeholder Desc"

[node name="VBoxContainer" type="VBoxContainer" parent="MissionCard/VBoxContainer/DetailsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 21

[node name="PanelContainer" type="PanelContainer" parent="MissionCard/VBoxContainer/DetailsContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_jwu8f")

[node name="CardImage" type="TextureRect" parent="MissionCard/VBoxContainer/DetailsContainer/HBoxContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 139.453)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5
